# GraphNN

./: .gitignore  pyproject.toml
output/: FeaturesMinimal.json  FeaturesMinimalNoNorm.json  FeaturesMinimalNoNorm.pth  FeaturesTarget.json  FeaturesTarget.pth  Huber1.json  Huber1.pth  PerNodeNorm.json  PerNodeNorm.pth  Test1.json  Test1.pth  Test2.json  Test2.pth  Test3.json  Test3.pth  Test4.json  Test4.pth  TestGradientAcc.json  TestGradientAcc.pth  X.json  X.pth  X1.json  X1.pth  X2.json  X2.pth  X3.json
src/bach600/: config.py  dataset.py  gnn.py  logging.py  loss.py  main.py  utils.py
