[project]
name = "bach600"
version = "0.1.0"
description = "bach600"
authors = [
    {name = "Florian Haus", email = "s4923399@stud.uni-frankfurt.de"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "torch",
    "torchvision",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "pyarrow>=12.0",
    "openbayestool"
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu118", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu118", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[build-system]
requires = [
    "setuptools>=65.5.0",
    "wheel"
]
build-backend = "setuptools.build_meta"